ポートフォリオのデザイン作成

--- a/app/assets/stylesheets/atoms/_button.sass
+++ b/app/assets/stylesheets/atoms/_button.sass
@@ -34,7 +34,7 @@
     font-weight: 600
   &.is-lg,
   &.is-lg input[type="submit"]
-    +button-size(.9375rem, 1, 45px)
+    +button-size(1rem, 1, 2.75rem)
     font-weight: 800
   &.is-xl,
   &.is-xl input[type="submit"]
