--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -58,6 +58,7 @@ input[type=week].a-text-input
     cursor: pointer
 
 textarea.a-text-input
+  line-height: 1.5
   min-height: 6rem
   overflow: hidden
   &.is-md
