--- a/app/assets/stylesheets/blocks/form/_form-actions.sass
+++ b/app/assets/stylesheets/blocks/form/_form-actions.sass
@@ -20,9 +20,10 @@
     +media-breakpoint-down(sm)
       margin-bottom: 1.5rem
   &.is-main
-    min-width: 12rem
-    &:first-child:last-child
-      min-width: 18rem
+    +media-breakpoint-up(md)
+      min-width: 14rem
+      &:first-child:last-child
+        min-width: 18rem
     +media-breakpoint-down(sm)
       width: 100%
   +media-breakpoint-down(sm)
