--- a/app/assets/stylesheets/blocks/report/_learning-times.sass
+++ b/app/assets/stylesheets/blocks/report/_learning-times.sass
@@ -1,5 +1,5 @@
 .learning-times
-  border-bottom: solid 1px $border
+  border-top: solid 1px $border
   +media-breakpoint-up(md)
     +padding(vertical, .75rem)
     +padding(horizontal, 2rem)
