--- a/app/assets/stylesheets/blocks/user/_user-data.sass
+++ b/app/assets/stylesheets/blocks/user/_user-data.sass
@@ -1,6 +1,7 @@
 .user-part
   background-color: #b04d4d
-  padding: .375rem .75rem
+  +padding(horizontal, .75rem)
+  height: 1.25rem
   +text-block(.625rem 1, center $reversal-text 600 flex nowrap)
   align-items: center
   margin-right: .5rem
