--- a/app/assets/stylesheets/mixins/_button.sass
+++ b/app/assets/stylesheets/mixins/_button.sass
@@ -30,8 +30,9 @@
       +size(100%)
       cursor: pointer
   i
-    margin-right: .45em
-    margin-top: .04em
+    margin-right: .35em
+    margin-top: .02em
+    font-size: 1.07em
   &.is-icon
     i
       +text-block(1.3em 1)
