--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -65,6 +65,10 @@ body
       padding-right: 1rem
   +media-breakpoint-down(md)
     +padding(horizontal, 1rem)
+  body.is-learning-page &
+    &.is-md
+      width: 48rem
+      +margin(horizontal, auto)
   body.welcome &
     width: 75rem
     +padding(horizontal, 1rem)
