--- a/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
@@ -7,7 +7,7 @@
 
 .thread-list-item__inner
   +position(relative)
-  padding-left: 3.5rem
+  padding-left: 3.75rem
   +media-breakpoint-down(sm)
     padding-left: 3.25rem
 
@@ -61,7 +61,7 @@
 .thread-list-item__header
   display: flex
   align-items: center
-  margin-bottom: .25rem
+  margin-bottom: .125rem
   justify-content: space-between
   +media-breakpoint-down(sm)
     flex-direction: column
@@ -119,6 +119,7 @@
 
 .thread-list-item-meta
   display: flex
+  height: 1.25rem
   align-items: center
   +text-block(.75rem 1.4)
 
@@ -153,7 +154,7 @@
 
 .thread-list-item__checked-author-icon
   border-radius: 50%
-  +size(1.375rem)
+  +size(1.25rem)
   object-fit: cover
   &:not(:first-child)
     margin-left: .25rem
@@ -185,6 +186,11 @@
   input:checked + &
     display: block
 
+.thread-list-item__user-description
+  +media-breakpoint-up(md)
+    font-size: .8125rem
+  +media-breakpoint-down(sm)
+    font-size: .75rem
 .thread-list-item__close-user-detail
   margin-top: 1rem
   +text-block(.8125rem 1.4, flex $main)
@@ -192,3 +198,8 @@
   justify-content: center
   +hover-link-reversal
   cursor: pointer
+
+.thread-list-item__summury
+  color: $muted-text
+  p
+    +text-block(.75rem 1.5)
