--- a/app/views/thread/_thread_watch.html.slim
+++ b/app/views/thread/_thread_watch.html.slim
@@ -1,15 +1,15 @@
-.thread-meta__watch
+.thread-watch
   - if current_user.id.in?(watchable.watches.pluck(:user_id))
-    .thread-meta__watch-button.is-active.a-button.is-sm.is-secondary.is-submit-input.is-left-icon
-      = form_for @watch, url: watch_path, method: :delete, html: { class: "thread-meta__watch-form" } do |f|
+    .thread-watch__button.is-active.a-button.is-sm.is-secondary.is-submit-input.is-left-icon
+      = form_for @watch, url: watch_path, method: :delete, html: { class: "thread-watch__form" } do |f|
         = hidden_field_tag :user_id, current_user.id
         = hidden_field_tag watchable.class.to_s.tableize.singularize + "_id", watchable.id
         i.fas.fa-eye
-        = f.submit "Unwatch", class: "thread-meta__watch-action"
+        = f.submit "Unwatch", class: "thread-watch__action"
   - else
-    .thread-meta__watch-button.is-inactive.a-button.is-sm.is-main.is-submit-input.is-left-icon
-      = form_for @watch, html: { class: "thread-meta__watch-form" } do |f|
+    .thread-watch__button.is-inactive.a-button.is-sm.is-main.is-submit-input.is-left-icon
+      = form_for @watch, html: { class: "thread-watch__form" } do |f|
         = hidden_field_tag :user_id, current_user.id
         = hidden_field_tag watchable.class.to_s.tableize.singularize + "_id", watchable.id
         i.fas.fa-eye
-        = f.submit "Watch", class: "thread-meta__watch__form__action"
+        = f.submit "Watch", class: "thread-watch__form-action"
