--- a/app/views/users/works/index.html.slim
+++ b/app/views/users/works/index.html.slim
@@ -8,16 +8,22 @@ header.page-header
         ul.page-header-actions__items
           li.page-header-actions__item
             = link_to "ユーザー一覧", users_path, class: "a-button is-md is-secondary is-block"
-          li.page-header-actions__item
-            = link_to new_work_path, class: "a-button is-md is-warning is-block" do
-              i.fas.fa-plus
-              | 作品を追加
+          - if current_user == @user
+            li.page-header-actions__item
+              = link_to new_work_path, class: "a-button is-md is-warning is-block" do
+                i.fas.fa-plus
+                | 作品を追加
 
 .page-tools
   = render "page_tabs", resource: @user
 
 .page-body
   .container
-    .users
+    .works
       .row.is-gutter-width-32
         = render partial: "works/work", collection: @works, as: :work
+      - if current_user == @user
+        li.page-header-actions__item
+          = link_to new_work_path, class: "a-button is-md is-warning is-block" do
+            i.fas.fa-plus
+            | 作品を追加
