--- a/app/views/works/_work.html.slim
+++ b/app/views/works/_work.html.slim
@@ -1,17 +1,15 @@
-.col-xxl-3.col-xl-4.col-lg-4.col-md-6.col-xs-12
+.col-xxl-2.col-xl-3.col-lg-4.col-md-6.col-xs-12
   .works-item
     .works-item__inner.a-card
       header.works-item__header
-        .works-item__icon
-            = link_to work do
-              - if work.thumbnail.present?
-                = image_tag work.thumbnail_image(40)
-              - else
-                = "No Image"
-              //= image_tag work.thumbnail_image(80), class: "works-item__icon-image" unless work.thumbnail.nil?
-        .works-item__header-container
-          .works-item__name
-            = link_to work.title, work, class: "works-item__name-link"
+        = link_to work, class: "works-item__image-link" do
+          - if work.thumbnail.present?
+            = image_tag work.thumbnail_image(40), class: "works-item__image"
+          - else
+            = "No Image"
+          //= image_tag work.thumbnail_image(80), class: "works-item__icon-image" unless work.thumbnail.nil?
       .works-item__body
-        .works-item__description
-          p = truncate(work.description, length: 200)
+        h2.works-item__title
+          = link_to work.title, work, class: "works-item__title-link"
+        .works-item__description.a-short-text
+          = md_summury(work.description, 200)
