--- a/app/views/works/show.html.slim
+++ b/app/views/works/show.html.slim
@@ -6,33 +6,44 @@ header.page-header
       h1.page-header__title
         = title
       .page-header-actions
-        ul.page-header-actions__items
+        .page-header-actions__items
+          .page-header-actions__item
+            = link_to user_portfolio_path(@work.user), class: "a-button is-md is-secondary is-block" do
+              | ポートフォリオ
 
 .page-body
   .container
-    .thread
+    .thread.is-header-author
       .thread__inner.a-card
         header.thread-header
-          h1.thread-header__title
+          = link_to user_portfolio_path(@work.user), itempro: "url", class: "thread-header__author-link" do
+            = image_tag @work.user.avatar_image(120), class: "thread-header__author-icon is-#{@work.user.role}"
+          h2.thread-header__title
             = @work.title
-          .thread-meta
-            .thread-meta__author-name
-              = link_to @work.title, class: "thread-meta__author-name-link" do
+          .thread-header__lower-side
+            .thread-header__lower-side-author-name
+              = link_to @work.title, class: "thread-header__lower-side-author-name-link" do
                 = @work.user.login_name
-            time.thread-meta__created-at(datetime="#{@work.created_at.to_datetime}" pubdate="pubdate")
-              = l @work.created_at
-            time.thread-meta__updated-at(datetime="#{@work.updated_at.to_datetime}" pubdate="pubdate")
-              = l @work.updated_at
-        .thread__description
-          - if @work.thumbnail.present?
-            = image_tag @work.thumbnail_image(40)
-          - else
-            = "No Image"
-        .thread__description.js-target-blank
-          = link_to "URL", @work.url if @work.url.present?
-          = link_to "リポジトリ", @work.repository
+            .thread-header__lower-side-date
+              .thread-header__lower-side-label
+                | 登録日
+              time.thread-header__lower-side-value(datetime="#{@work.created_at.to_datetime}" pubdate="pubdate")
+                = l @work.created_at
+        - if @work.thumbnail.present?
+          = image_tag @work.thumbnail_image(40), class: "thread__work-image"
         .thread__description.js-target-blank.is-long-text.js-markdown-view
           p = @work.description
+        .card-footer
+          ul.card-footer-actions__items
+            - if @work.url.present?
+              li.card-footer-actions__item
+                = link_to @work.url, target: "_blank", class: "card-footer-actions_action a-button is-lg is-main is-block" do
+                  i.fas.fa-globe
+                  | URL
+            li.card-footer-actions__item
+              = link_to @work.repository, target: "_blank", class: "card-footer-actions__action a-button is-lg is-main is-block" do
+                i.fab.fa-github-alt
+                | Repository
         - if @work.user == current_user || admin_login?
           .card-footer
             .card-footer-actions
