お知らせの未読既読の色が逆になってたのを修正

--- a/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
@@ -90,7 +90,7 @@
   word-break: break-all
   +hover-link-reversal
   .thread-list-item.is-wip &,
-  .thread-list-item.is-unread &
+  .thread-list-item.is-read &
     color: $muted-text
 
 .thread-list-item__sub-title
