フォームの共通化、管理画面を更新

--- a/app/assets/stylesheets/atoms/_button.sass
+++ b/app/assets/stylesheets/atoms/_button.sass
@@ -73,6 +73,8 @@ input[type="button"]
 
 .is-button-group
   display: flex
+  .is-text-align-center &
+    justify-content: center
   >*:not(:last-child)
     margin-right: -1px
   li:first-child
