--- a/app/assets/stylesheets/blocks/admin/_admin-table.sass
+++ b/app/assets/stylesheets/blocks/admin/_admin-table.sass
@@ -47,6 +47,8 @@
   padding: .375rem .75rem
   border: solid 1px $background-shade
   +text-block(.875rem 1.45)
+  &.is-text-align-center
+    text-align: center
 
 .admin-table-item__body
   border-radius: .25rem
