--- a/app/assets/stylesheets/blocks/form/_markdown-form.sass
+++ b/app/assets/stylesheets/blocks/form/_markdown-form.sass
@@ -1,7 +1,8 @@
 .markdown-form__text-area
-  min-height: 22rem
-  +media-breakpoint-down(sm)
-    margin-bottom: 1rem
+  &.a-text-input
+    min-height: 22rem
+    +media-breakpoint-down(sm)
+      margin-bottom: 1rem
 
 .markdown-form__preview
   background-color: $base
