--- a/app/views/admin/companies/_form.html.slim
+++ b/app/views/admin/companies/_form.html.slim
@@ -9,7 +9,7 @@
       .row
         .col-md-6.col-xs-12
           = f.label :description, class: "a-label"
-          = f.text_area :description, size: "10x20", class: "a-textarea"
+          = f.text_area :description, size: "10x20", class: "a-text-input"
     .form-item
       .row
         .col-md-6.col-xs-12
