--- a/app/views/practices/questions/index.html.slim
+++ b/app/views/practices/questions/index.html.slim
@@ -28,5 +28,5 @@ nav.tab-nav
         - @questions.each do |question|
           = render "questions/question", question: question
     - else
-      .thread-list.is-empty
+      .a-empty-message
         | 質問はまだありません。
