--- a/app/views/practices/reports/index.html.slim
+++ b/app/views/practices/reports/index.html.slim
@@ -22,5 +22,5 @@ header.page-header
         = render partial: "reports/report", collection: @reports, as: :report
       = paginate @reports, position: "bottom"
     - else
-      .thread-list.is-empty
+      .a-empty-message
         | 日報はまだありません。
