--- a/app/views/admin/companies/index.html.slim
+++ b/app/views/admin/companies/index.html.slim
@@ -4,10 +4,12 @@ header.page-header
   .container
     .page-header__inner
       h1.page-header__title = title
-      .page-header__action
-        = link_to new_admin_company_path, class: "a-button is-md is-warning is-block" do
-          i.fas.fa-plus
-          | 会社作成
+      .page-header-actions
+        .page-header-actions__items
+          .page-header-actions__item
+            = link_to new_admin_company_path, class: "a-button is-md is-warning is-block" do
+              i.fas.fa-plus
+              | 会社作成
 
 .page-tools
   = render "admin/admin_page_tabs"
