--- a/app/views/announcements/_form.html.slim
+++ b/app/views/announcements/_form.html.slim
@@ -11,7 +11,7 @@
       .row.js-markdown-parent
         .col-md-6.col-xs-12
           = f.label :description, class: "a-label"
-          = f.text_area :description, class: "a-textarea js-warning-form js-markdown markdown-form__text-area", data: { "preview": ".js-preview" }
+          = f.text_area :description, class: "a-text-input js-warning-form js-markdown markdown-form__text-area", data: { "preview": ".js-preview" }
         .col-md-6.col-xs-12
           .a-label
             | プレビュー
