--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -12,11 +12,11 @@
       .row.js-markdown-parent
         .col-md-6.col-xs-12
           = f.label :body, class: "a-label"
-          = f.text_area :body, class: "a-textarea js-warning-form js-markdown markdown-form__text-area", data: { "preview": ".js-preview" }
+          = f.text_area :body, class: "a-text-input js-warning-form js-markdown markdown-form__text-area", data: { "preview": ".js-preview" }
         .col-md-6.col-xs-12
           .a-label
             | プレビュー
-          .js-preview.is-long-text-style.markdown-form__preview
+          .js-preview.is-long-text.markdown-form__preview
 
     .form-item
       .row
@@ -26,7 +26,7 @@
 
   .form-actions
     ul.form-actions__items
-      li.form-actions__item
+      li.form-actions__item.is-main
         = f.submit nil, class: "a-button is-lg is-warning is-block", id: "js-shortcut-submit"
       li.form-actions__item
         - if params[:action] == "new" || params[:action] == "create"
