--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -28,6 +28,6 @@ header.page-header
           br
           = raw @article.tag_list.map { |t| link_to t, tag_path(t) }.join(",")
       section.practice-content.a-card
-        .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text-style
+        .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text
           = @article.body
       section.practice-content.a-card
