--- a/app/views/courses/_form.html.slim
+++ b/app/views/courses/_form.html.slim
@@ -9,7 +9,7 @@
     .row.js-markdown-parent
       .col-md-6.col-xs-12
         = f.label :description, class: "a-label"
-        = f.text_area :description, class: "a-textarea js-warning-form markdown-form__text-area js-markdown", data: { "preview": ".js-preview" }
+        = f.text_area :description, class: "a-text-input js-warning-form markdown-form__text-area js-markdown", data: { "preview": ".js-preview" }
       .col-md-6.col-xs-12
         .a-label
           | プレビュー
