--- a/app/views/home/_job_seeking_users.html.slim
+++ b/app/views/home/_job_seeking_users.html.slim
@@ -17,15 +17,18 @@
 
         .thread-list-item-meta
           .thread-list-item-meta__items
-            .thread-list-item-meta__item
-              = link_to user_reports_path(user), class: "thread-list-item-meta__item-link" do
-                | 日報一覧（#{user.reports.count}）
-            .thread-list-item-meta__item
-              = link_to user_products_path(user), class: "thread-list-item-meta__item-link" do
-                | 提出物一覧（#{user.products.count}）
-            .thread-list-item-meta__item
-              = link_to user_portfolio_path(user), class: "thread-list-item-meta__item-link" do
-                | ポートフォリオ（#{user.works.count}）
+            - if user.reports.present?
+              .thread-list-item-meta__item
+                = link_to user_reports_path(user), class: "thread-list-item-meta__item-link" do
+                  | 日報一覧（#{user.reports.count}）
+            - if user.products.present?
+              .thread-list-item-meta__item
+                = link_to user_products_path(user), class: "thread-list-item-meta__item-link" do
+                  | 提出物一覧（#{user.products.count}）
+            - if user.works.present?
+              .thread-list-item-meta__item
+                = link_to user_portfolio_path(user), class: "thread-list-item-meta__item-link" do
+                  | ポートフォリオ（#{user.works.count}）
       input.a-toggle-checkbox(id="show-user-detail-#{user.id}" type="checkbox")
       .thread-list-item__user-detail
         .thread-list-item__user-description.a-short-text
