--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -7,7 +7,7 @@
         .col-md-6.col-xs-12
           label.a-label
             | 提出物
-          = f.text_area :body, class: "a-textarea js-warning-form js-markdown markdown-form__text-area", data: { "preview": ".js-preview" }
+          = f.text_area :body, class: "a-text-input js-warning-form js-markdown markdown-form__text-area", data: { "preview": ".js-preview" }
         .col-md-6.col-xs-12
           .a-label
             | プレビュー
