--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -26,7 +26,7 @@ header.page-header.is-margin-bottom-0
       .thread-list.a-card
         = render @questions
     - else
-      .thread-list.is-empty
+      .a-empty-message
         - if params[:solved] == "true"
           | 解決済みの質問はまだありません。
         - else
