--- a/app/views/users/comments/index.html.slim
+++ b/app/views/users/comments/index.html.slim
@@ -10,7 +10,7 @@ header.page-header
             = link_to "ユーザー一覧", users_path, class: "a-button is-md is-secondary is-block"
 
 .page-tools
-  = render "page_tabs", resource: @user
+  = render "users/page_tabs", user: @user
 
 .page-body
   .container
