--- a/app/views/works/show.html.slim
+++ b/app/views/works/show.html.slim
@@ -40,10 +40,11 @@ header.page-header
                 = link_to @work.url, target: "_blank", class: "card-footer-actions_action a-button is-lg is-main is-block" do
                   i.fas.fa-globe
                   | URL
-            li.card-footer-actions__item
-              = link_to @work.repository, target: "_blank", class: "card-footer-actions__action a-button is-lg is-main is-block" do
-                i.fab.fa-github-alt
-                | Repository
+            - if @work.repository.present?
+              li.card-footer-actions__item
+                = link_to @work.repository, target: "_blank", class: "card-footer-actions__action a-button is-lg is-main is-block" do
+                  i.fab.fa-github-alt
+                  | Repository
         - if @work.user == current_user || admin_login?
           .card-footer
             .card-footer-actions
