--- a/app/views/application/_header_links.html.slim
+++ b/app/views/application/_header_links.html.slim
@@ -10,7 +10,7 @@
 
     - if current_user.admin?
       li.header-links__item
-        label.header-links__link.test-show-menu(for="header-admin-menu")
+        label.header-links__link(for="header-admin-menu")
           i.fas.fa-crown
           .header-links__link-label Admin
         input.a-toggle-checkbox#header-admin-menu(type="checkbox")
