ポートフォリオページのデザイン、文言追加

--- a/app/assets/stylesheets/_common-imports.sass
+++ b/app/assets/stylesheets/_common-imports.sass
@@ -38,6 +38,7 @@
 @import "mixins/grid"
 @import "mixins/border"
 @import "mixins/font-awsome"
+@import "mixins/placeholder"
 
 @import "mixins/long-text-style"
 @import "mixins/short-text-style"
