--- a/app/assets/stylesheets/variables/_colors.sass
+++ b/app/assets/stylesheets/variables/_colors.sass
@@ -10,6 +10,7 @@ $default-text: #35343c
 $reversal-text: white
 $muted-text: #9da4a7
 $semi-muted-text: #62626f
+$placeholder-text: #bbbbbb
 
 $side: $main
 $side-border: #6b4eca
@@ -62,8 +63,6 @@ $input-border: #c1c5b9
     color: #1c6ee2
   &:active
     color: #b3430b
-
-$placeholder-text: #aaa
 
 $luma-contrast-bright-color: $default-text
 $luma-contrast-dark-color: $reversal-text
