--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,10 +27,10 @@ html.is-application lang="ja"
     - if display_global_nav?
         = render "global_nav"
     .wrapper
+      = render "application/card_alert"
       - if display_header?
         = render "header"
       = render "flash"
-      = render "required_field"
       main.page
         = yield
     - if display_recent_reports?
