--- a/app/views/application/_required_field.html.slim
+++ b/app/views/application/_required_field.html.slim
@@ -1,8 +1,17 @@
 - fields = required_fields
 - if fields.present?
-  .alert.is-error.js-close-alert
-    .container
-      .alert__container
-        button.js-close-alert__trigger.alert__close(type="button" class="close" data-dismiss="alert") &times;
+  .a-card
+    header.card-header.is-sm
+      h2.card-header__title
+        | 未入力の項目
+    .card-list.is-reauired
+      .card-list__deacription
+        .card-list__notice
+          p
+            | プラクティス
+            = link_to "学習の準備", "https://bootcamp.fjord.jp/courses/1/practices#category-1"
+            | が終わりましたら、以下の項目を埋めてください。
+      ul.card-list__items
         - fields.each do |field|
-          p.alert__message = field
+          li.card-list__item
+            = field
