formのデザイン修正

--- a/app/assets/stylesheets/blocks/shared/_flash.sass
+++ b/app/assets/stylesheets/blocks/shared/_flash.sass
@@ -13,6 +13,9 @@
 
 .flash__message
   +text-block(.875rem 1.45, center $reversal-text)
+  a
+    +hover-link-reversal
+    color: $reversal-text
 
 .flash__close
   +position(absolute, right 0, top 50%)
