--- a/app/views/application/_card_alert.html.slim
+++ b/app/views/application/_card_alert.html.slim
@@ -1,3 +1,8 @@
-- if current_user.student? && !current_user.free? && !current_user.paid?
- = link_to new_card_path, class: "card-list__item-link" do
-  | クレジットカードをしてください。
+- if current_user.student? && !current_user.free? && !current_user.paid? && body_class.exclude?("card")
+  .flash.is-alert
+    .flash__container
+      .flash__message
+        | 学習を開始するには
+        = link_to new_card_path do
+          | クレジットカードの登録
+        | が必要です。
