--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -217,13 +217,13 @@
         = f.hidden_field :training, value: params[:training]
       .form-item
         // リタイア
-        = f.label :retired_on, class: "a-label"
-        = f.text_field :retired_on, class: "a-text-input"
+        = f.label :retired_on, class: "a-sm-label"
+        = f.date_field :retired_on, class: "a-text-input"
 
       .form-item
         // 卒業
         = f.label :graduated_on, class: "a-label"
-        = f.text_field :graduated_on, class: "a-text-input"
+        = f.date_field :graduated_on, class: "a-text-input"
 
   .form-actions
     ul.form-actions__items
